# phyling

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  compile.sh  pyproject.toml  requirements.txt  setup.py  swagger.yaml
.github/workflows/: python-lint.yml  python-publish.yml
examples/Analyse/: decoder.ipynb
examples/Nano-Phyling/: multi_devices.ipynb  nanophyling.ipynb
examples/Nano-Phyling/lab_examples/: pendulum.ipynb
examples/Nano-Phyling/lab_examples/data/: pendulum_example.csv
examples/NanoPhyling-MiniPhyling/: multi_devices.ipynb  single_device.ipynb
examples/NanoPhyling-MiniPhyling/lab_examples/: pendulum.ipynb
examples/Phyling API/Phyling python lib/: api.ipynb  realtime.ipynb
examples/Phyling API/RAW API examples/: minimal_oauth.py  realtime.html  single-device.html
notebooks/: Example.ipynb  api.ipynb  decoder.ipynb  nanophyling.ipynb  realtime.ipynb
phyling/: phyling_utils.py
phyling/api/: __init__.py  api.py  phylingSocket.py  realtime.py  record.py  user.py  utils.py
phyling/ble/: __init__.py  base_device.py  miniphyling.py  nanophyling.py  phyling_devices.py
phyling/decoder/: calib_texisense.py  calibration_use.py  decoder.py  decoder_utils.pyx  setup.py  utils.py
