[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython",
    "numpy>=1.24.4,<3",
]
build-backend = "setuptools.build_meta"

[project]
name = "phyling"
description = "Phyling public package"
readme = "README.md"
license = { file = "LICENSE.txt" }
urls = { Homepage = "https://github.com/phyling-sport/phyling" }
dependencies = [
    "numpy>=1.24.4,<3",
]
# if tag is "v7.0.0", version will be "7.0.0"
dynamic = ["version"]

[tool.setuptools]
packages = ["phyling"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
